force-app/main/default/objects/Transporteur__c/Transporteur__c.object-meta.xml
<CustomObject>
    <label>Transporteur</label>
    <nameField>
        <label>Transporteur Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transporteur</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>