force-app/main/default/objects/Transporteur__c/fields/Actif__c.field-meta.xml
<CustomField>
    <fullName>Actif__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>