force-app/main/default/objects/Transporteur__c/fields/ID_Transporteurs__c.field-meta.xml
<CustomField>
    <fullName>ID_Transporteurs__c</fullName>
    <externalId>true</externalId>
    <label>ID Transporteurs</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>