force-app/main/default/objects/Transporteur__c/fields/Pays_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Pays_Livraison__c</fullName>
    <label>Pays_Livraison</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Belgique</fullName>
            </value>
            <value>
                <fullName>Luxembourg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>