force-app/main/default/objects/Transporteur__c/fields/Type_Client__c.field-meta.xml
<CustomField>
    <fullName>Type_Client__c</fullName>
    <label>Type Client</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Particulier</fullName>
            </value>
            <value>
                <fullName>Professionnel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>